<resources>
    <string name="app_name">Goodway</string>
    <string name="version">Version Alpha</string>

    <string name="facebook_app_id">871254659639982</string>

    <!-- register operations -->
    <string name="mail">Adresse mail</string>
    <string name="fname">Prénom</string>
    <string name="lname">Nom</string>
    <string name="birthday">Anniversaire</string>
    <string name="login">Connexion</string>
    <string name="register">Inscription</string>
    <string name="password">Mot de passe</string>
    <string name="change">Modifier</string>
    <string name="next">Suivant</string>
    <string name="back">Retour</string>
    <string name="confirm">Confirmer</string>
    <string name="confirm_delete">Etes vous sur de vouloir supprimer cette adresse ?</string>
    <string name="passwordFirst">Entrez votre mot de passe</string>
    <string name="passwordSecond">Confirmez</string>
    <string name="passwordsDiffer">Les mots de passe sont différents</string>

    <string name="find_friend">Rechercher des amis</string>
    <string name="add">Ajouter</string>
    <string name="pending">En attente</string>

    <string name="no_ways_found">Oups nous n\'avons pas trouvé de trajet</string>
    <string name="no_events">Pas d\'évènements disponibles</string>
    <string name="no_groups">Vous n\'avez aucun groupes</string>

    <!-- drawer -->
    <string name="social">Social</string>
    <string name="history">Historique</string>
    <string name="settings">Réglages</string>

    <string name="contacts">Contacts</string>
    <string name="events">Evènements</string>
    <string name="engagement">Engagement</string>
    <string name="trips">Voyages</string>
    <string name="addresses">Adresses</string>
    <string name="routes">Itinéraires</string>
    <string name="prevEvents">Evènements passés</string>
    <string name="finished">Trajet terminé</string>

    <string name="no_friends">Mince, vous n\'avez pas encore d\'amis :)</string>
    <string name="no_friend_requests">Vous n\'avez aucune demande d\'ami en attente</string>

    <string name="connexion_error">Erreur de connexion</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Supprimer</string>

    <string name="action_search">Search</string>

    <string name="openDrawer">Ouvrir</string>
    <string name="closeDrawer">Fermer</string>

    <string name="bus">Bus</string>

    <string name="home">Maison</string>
    <string name="work">Travail</string>
    <string name="your_location">Votre position</string>
    <string name="your_location_waiting">En attente de votre gps</string>
    <string name="markerPosition">Position carte</string>

    <string name="home_not_available">Maison (non partagée)</string>
    <string name="work_not_available">Lieu de travail (non partagé)</string>
    <string name="linked_to">en lien avec</string>

    <!-- Suggestions -->
    <string name="select">Selectionner</string>

    <!-- ErrorAction message -->
    <string name="no_from">Pas de position de départ</string>
    <string name="no_to">Pas de destination</string>
    <string name="unavailable">Indisponible</string>
    <string name="your_location_not_available">Position non disponible</string>

    <string name="today">Aujourd\'hui</string>
    <string name="hours">heures</string>
    <string name="minutes">minutes</string>
    <string name="at">à</string>

    <string name="from">depuis</string>
    <string name="to">vers</string>

    <string name="bikestation">à la station</string>
    <string name="to_bikestation">jusqu\'à la station</string>

    <string name="trip">Voyage</string>
    <string name="store_pass">)qiJ7Y^BrX2nEGX2Tte2</string>

    <!-- transitions -->
    <string name="transition_event_image">transition_event_image</string>
    <string name="transition_way_card">transition_way_card</string>

    <string name="bustrip">Bus</string>
    <string name="waiting">attendre</string>
    <string name="transfer">changement</string>
    <string name="walking">marcher</string>
    <string name="unknown">Tapis volant</string>

    <string name="during">pendant</string>

    <string name="departure">Départ</string>
    <string name="arrival">Destination</string>

    <string name="departure_at">Départ à</string>
    <string name="arrival_at">Arrivée à</string>

    <string name="preferences">Préférences (non disponible)</string>

    <string name="no_address">Aucune adresse indiquée</string>
    <string name="updating_share_options">Mise à jour des options de partages</string>
    <string name="failed_updating_options">Echec de la mise à jour des paramètres</string>

    <string name="home_not_set">Votre addresse n\'a pas été renseignée. Voulez-vous l\'ajouter ?</string>
    <string name="did_not_give_location">n\'a pas renseigné cette information</string>
    <string name="content_hidden">Ce contenu est reservé aux amis de</string>

    <string name="update_location">Mise à jour de la position</string>
    <string name="failure">Echec</string>

    <string name="request_location">Demande de position</string>

    <string name="home_not_shared">Domicile non partagé</string>
    <string name="work_not_shared">Travail non partagé</string>
    <string name="wrong_id">Mauvais identifiants</string>

    <string name="birthday_not_set">Anniversaire non renseigné</string>
    <string name="notAvailable">Non disponible</string>
    <string name="available">Disponible</string>

    <string name="enter_mail">Entrez une adresse mail</string>
    <string name="enter_password">Entrez un mot de passe</string>
    <string name="enter_fname">Entrez votre prénom</string>
    <string name="enter_lname">Entrez votre nom</string>
    <string name="enter_bday">Entrez votre date de naissance</string>
    <string name="not_valid">Non valide</string>

    <string name="work_not_set">Travail non renseigné</string>
    <string name="set_address">Voulez-vous renseigner cette addresse ?</string>

    <!-- Providers -->
    <string name="navitia">Navitia</string>
    <string name="carSharing">Covoiturage</string>
    <string name="uber">Uber</string>
    <string name="bike">Vélo</string>

    <string name="noNavitia">Aucun itinéraire Navitia</string>
    <string name="noCarSharing">Indisponible</string>
    <string name="noUber">Indisponible</string>
    <string name="noBike">Indisponible</string>

    <string name="locations">Adresses</string>
    <string name="recent_activity">Activité récente</string>
    <string name="add_address">Ajouter une adresse</string>

    <string name="request_places">Demande des adresse</string>

    <string name="name">Nom</string>
    <string name="shared">Partagé</string>

    <string name="change_address">Modifier l\'adresse</string>
    <string name="apply_modifications">Appliquer les modifications ?</string>

    <string name="online_paiement">Paiement en ligne</string>
    <string name="irl_paiement">Paiement IRL</string>

    <string name="featured">Promotion</string>

    <string name="deleting">Suppression en cours</string>
    <string name="duration">Durée</string>

    <string name="reserved_to_friends">Contenu réservé aux amis</string>

    <string name="choose_picture">Choisissez une photo</string>
    <string name="install_explorer">Nous n\'avons trouvé aucun explorateur de fichier sur votre téléphone</string>

    <string name="early_adopter">Précurseur</string>
    <string name="cofounder">Cofondateur</string>
    <string name="newcomer">Nouveau venu</string>

    <string name="could_not_send">Nous n\'avons pas réussi à mettre à jour votre photo</string>

    <string name="add_group">Ajouter un groupe</string>
    <string name="find_groups">Rechercher des groupes</string>
    <string name="groups">Groupes</string>
    <string name="subscriptions">Abonnements</string>

    <string name="address">Adresses</string>

    <string name="organised_by">organisé par</string>
    <string name="the">le</string>
    <string name="action_quit">Quitter</string>
    <string name="estimate">environ</string>

    <string name="accounts">Comptes</string>

    <string name="goodway_preferences">goodway_v1_preferences</string>

    <string name="route_type_prompt">Choisissez départ ou arrivée</string>
    <string name="type_address_start">Entrez une adresse de départ</string>
    <string name="type_address_end">Entrez une adresse d\'arrivée</string>
    <string-array name="route_type">
        <item>Départ</item>
        <item>Arrivée</item>
    </string-array>

    <string name="what_to_do">Que faire</string>
    <string name="current_location">position actuelle</string>
    <string name="unset">Non définie</string>

    <string name="add_account">Ajouter un compte</string>

    <string name="not_set">Non renseigné</string>

    <string name="undefined">Indéfini</string>

    <string name="accept">Accepter</string>

</resources>
