<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/goodway_med"/>

    <TextView
        android:id="@+id/connectedAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/not_connected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonClick"
            android:text="@string/login"/>
        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonClick"
            android:text="@string/register"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:layout_marginTop="36dp"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/mail_login"
            android:layout_width="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/mail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/loginPassword"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_centerInParent="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/loginBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/back"
            android:onClick="nextBack"/>
        <Button
            android:id="@+id/loginNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/next"
            android:onClick="nextBack"/>
        </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginTop="36dp"
        android:layout_gravity="center_horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_marginLeft="24dp"
        android:inputType="textPersonName"
        android:hint="@string/fname"/>
    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_marginRight="24dp"
        android:inputType="textPersonName"
        android:hint="@string/lname"/>
    </LinearLayout>
        <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/mail"/>
        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/progress"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/passwordFirst"
            android:id="@+id/passwordFirst"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/passwordSecond"
            android:id="@+id/passwordSecond"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_centerInParent="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/back"
                android:onClick="nextBack"/>
            <Button
                android:id="@+id/registerNext"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/next"
                android:onClick="nextBack"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>