<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:layout_margin="4dp"
    android:elevation="@dimen/card_elevation"
    card_view:cardCornerRadius="@dimen/cardview_default_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:elevation="@dimen/toolbar_elevation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:inputType="textPostalAddress"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/name"/>

            <CheckBox
                android:id="@+id/shared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:checked="true"
                android:hint="@string/shared"/>
        </LinearLayout>
        <Button
            android:id="@+id/set"
            android:onClick="setAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center_horizontal"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/primary"
            android:text="@string/add_address"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</android.support.v7.widget.CardView>